style.css
html, body {
  padding: 0 0 0 0;
  margin: 0;
  font-family: 'helvetica', 'arial', 'sans';
}

h1,h2,h3,h4 {
  font-family: 'helvetica', 'arial', 'sans';
}


a {
  color: #000;
}

img {
  padding-top: 15px;

}
table, th, td {
  border: 1px solid black;
  padding: 3px;
}


figcaption {
/*  text-align: center; */
}

.imgWireFrame {
  display: block;
  color: #fff;
  border-color: #000;
  border-width: medium;
  background-color: #999;
  width: 350px;
  /* height: 250px;
  line-height: 250px; */
  padding: 60px 15px;
  text-align: center;
}
.header {
  background: #fff;
  color: #000;
  /* height: 500px; */
  height: auto;
  padding: 30px 30px 30px;
}

.header h1 {
  font-size: 50px;
}

.assignments {
  padding: 30px;
}
.assignment {
  font-size: 12px;
  line-height: 24px;
  font-family: 'helvetica', 'arial', 'sans';
  padding: 20px 20px 20px 30px;
  width: 250px;
  height: 400px;
  float: left;
}

.assignment a {
  color: #000;
  text-decoration: none;
}

.assignment a:hover {
  background: #F06;
  color: #F06;
  text-decoration: none;
}


.footer {
  width: 1100px;
  float: left;
  padding: 300px 0px 30px 30px;
}

.widebody {
  width: 600px;
  padding: 5px 30px 30px 30px;
}

.widebody a {
}

.widebody a:hover {
  background: #F06;
  color: #FFF;
  text-decoration: none;
}

